Bijayini | #1894 | (UI issue) Retrospective button misaligned

--- a/ui/app/styles/bahmni-layout/_retroMode.scss
+++ b/ui/app/styles/bahmni-layout/_retroMode.scss
@@ -41,7 +41,7 @@ $retroModeColor:  #0E74AF;
 		background: darken($retroModeColor, 6%);
 	  }
 	}
-      .retro-date-widget-wrapper{
+      .retro-date-widget-header{
         margin-top: 4px !important;
       }
   }
